...
        )
        Spacer(modifier = Modifier.height(5.dp))
        Form(Icons.Default.MailOutline,
            stringResource(R.string.icono_correo),
            stringResource(R.string.correo),
            stringResource(R.string.tu_email_com),correo,onCorreoChange,
            tag = "FormCorreoElectronico"
        )
        Form(Icons.Outlined.Lock,
            stringResource(R.string.icono_contrase_a),
            stringResource(R.string.contra),
            stringResource(R.string.minimo_6_caracteres),
            contraseña,onContraseñaChange,op=2,
            tag = "FormContraseña")
        Row(verticalAlignment = Alignment.CenterVertically) {
            Column(
                modifier.width(230.dp)
            ) {
                Form(Icons.Outlined.Person,
                    stringResource(R.string.icono_usuario),
                    stringResource(R.string.usuario),
                    stringResource(R.string.nombre_artista),
                    usuario,onUsuarioChange,
                    tag = "FormNombreUsuario")
            }
            Column {
                Form(Icons.Default.CalendarToday,
                    stringResource(R.string.icono_edad),
                    stringResource(R.string.edad),
                    stringResource(R.string._18),
                    edad,onEdadChange,
                    tag = "FormEdad")
            }

        }
    }

}
...
            stringResource(R.string.icono_profesion),
            stringResource(R.string.profe),
            stringResource(R.string.selecciona_tu_profesion),
            profesion,
            onProfesionChange,
            modifier.height(30.dp),
            tag = "FormProfesion")

        Form(Icons.Outlined.Description,
            stringResource(R.string.icono_biografia),
            stringResource(R.string.biografia),
            stringResource(R.string.cuentanos_sobre_ti_tu_estilo_artistico_experiencia_y_lo_que_te_apasina_del_arte),
            bio,
            onBioChange,
            tag = "FormBio")
    }

}
@Composable
@Preview(showBackground = true)
fun PerfilArtisticoPreview(){
...
@Composable
fun BotonCrear(registerButtonPressed: () -> Unit = {},modifier: Modifier = Modifier){
    BotonInteres(stringResource(R.string.crear), MaterialTheme.colorScheme.primaryContainer,
        MaterialTheme.colorScheme.onSecondaryContainer ,registerButtonPressed,modifier
        .width(370.dp)
        .height(60.dp)
        .testTag("BotonCrearCuenta"))

    Box(modifier = Modifier.fillMaxWidth(), contentAlignment = Alignment.Center) {
        HorizontalDivider(Modifier, DividerDefaults.Thickness, color = Color.LightGray)
        Box(modifier = Modifier.padding(horizontal = 8.dp)) {
            Text(
                text = "o",
...
        }
        Column(
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            Spacer(modifier = Modifier.height(8.dp))
            if (mostrarMensajeError){
                Text(mensajeError,Modifier.testTag("MensajeError"))
            }
            BotonCrear(registerButtonPressed)
            Spacer(modifier = Modifier.height(8.dp))
            val context = LocalContext.current
            val activity = context as Activity
            val launcher = rememberLauncherForActivityResult(
...
