...
        }
        //Navegacion Pagina principal
        composable(Rutas.Principal.ruta) {
            val viewmodel: PrincipalViewModel = hiltViewModel()
            val state by viewmodel.uiState.collectAsState()

            PrincipalScreen({obraId->navControler.navigate(Rutas.Detalle.createRoute(obraId ))}, {perfilId->navControler.navigate(Rutas.Perfil.createPRoute(perfilId))},viewmodel)
        }
        //Navegacion Inicio de Sesion
        composable(Rutas.Login.ruta) {
            val viewmodel: InicioSesionViewModel= hiltViewModel()
            val state by viewmodel.uiState.collectAsState()
            if (state.navegar){
                navControler.navigateSingleTopTo(Rutas.Principal.ruta)
                viewmodel.resetFlag()
            }
            InicioSesionScreen(viewmodel, { navControler.navigate(Rutas.Register.ruta) },navControler)
        }
        //Navegacion Registro
        composable(Rutas.Register.ruta) {
            val viewmodel: RegisterViewModel=hiltViewModel()
            val state by viewmodel.uiState.collectAsState()
            if (state.navegar){
...
